<resources>
    <string name="app_name">EasyGame</string>
    <string name="setting">Settings</string>
    <string name="count">Time remaining : 5s</string>
    <string name="score">Score : </string>
    <string name="start">Start the game!!</string>
    <string name="settings">Settings</string>
    <string name="normalScore">Best score on normal: none</string>
    <string name="randomScore">Best score on random: none</string>
    <string name="mode">Mode: Random</string>
    <string name="ScoreText">Mode: Normal</string>
    <string name="normalScoreText">Best normal score : </string>
    <string name="randomScoreText">Best random score : </string>
    <string name="clear">clear data</string>
    <string name="sound">Sound: on</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="eight">7</string>
    <string name="nine">8</string>
    <string name="ten">9</string>
    <string name="eleven">10</string>
    <string name="twelve">11</string>
    <string name="thirteen">12</string>
    <string name="fourteen">13</string>
    <string name="fifteen">14</string>
    <string name="sixteen">15</string>
</resources>