<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="456dp"
        android:background="@color/gray"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/back"
                android:layout_width="43dp"
                android:layout_height="44dp"
                android:background="@android:drawable/ic_menu_revert"
                android:onClick="onClickBackToGame"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/bestScoreNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/normalScore"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/bestScoreRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/randomScore"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sound"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:onClick="soundSwitch"
            android:text="@string/sound"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/mode"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:onClick="modeSwitch"
            android:text="@string/mode"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/clear"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="60dp"
            android:onClick="clearData"
            android:text="@string/clear"
            android:textSize="12sp"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>