<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table" />

    <RelativeLayout
        android:id="@+id/table"
        android:layout_width="280dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            style="@style/numberButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button1"
            style="@style/numberButton"
            android:layout_toRightOf="@id/button"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button2"
            style="@style/numberButton"
            android:layout_toRightOf="@id/button1"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button3"
            style="@style/numberButton"
            android:layout_toRightOf="@id/button2"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button4"
            style="@style/numberButton"
            android:layout_below="@id/button"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button5"
            style="@style/numberButton"
            android:layout_below="@id/button"
            android:layout_toRightOf="@id/button4"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button6"
            style="@style/numberButton"
            android:layout_below="@id/button"
            android:layout_toRightOf="@id/button5"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button7"
            style="@style/numberButton"
            android:layout_below="@id/button"
            android:layout_toRightOf="@id/button6"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button8"
            style="@style/numberButton"
            android:layout_below="@id/button4"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button9"
            style="@style/numberButton"
            android:layout_below="@id/button4"
            android:layout_toRightOf="@id/button8"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button10"
            style="@style/numberButton"
            android:layout_below="@id/button4"
            android:layout_toRightOf="@id/button9"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button11"
            style="@style/numberButton"
            android:layout_below="@id/button4"
            android:layout_toRightOf="@id/button10"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button12"
            style="@style/numberButton"
            android:layout_below="@id/button8"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button13"
            style="@style/numberButton"
            android:layout_below="@id/button8"
            android:layout_toRightOf="@id/button12"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button14"
            style="@style/numberButton"
            android:layout_below="@id/button8"
            android:layout_toRightOf="@id/button13"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button15"
            style="@style/numberButton"
            android:layout_below="@id/button8"
            android:layout_toRightOf="@id/button14"
            tools:ignore="UsingOnClickInXml" />
    </RelativeLayout>

    <TextView
        android:id="@+id/ScoreText"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/score"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normalScoreText"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/Score"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:gravity="start|center_vertical"
        android:text="@string/zero"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/table"
        app:layout_constraintStart_toEndOf="@+id/ScoreText"
        app:layout_constraintTop_toBottomOf="@+id/normalScore"
        app:layout_constraintVertical_bias="0.313"/>

    <TextView
        android:id="@+id/normalScoreText"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/normalScoreText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/normalScore"
        android:layout_width="50dp"
        android:layout_height="21dp"
        android:gravity="start|center_vertical"
        android:text="@string/zero"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/normalScoreText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/randomScoreText"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/randomScoreText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/randomScore"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/randomScore"
        android:layout_width="50dp"
        android:layout_height="21dp"

        android:gravity="start|center_vertical"
        android:text="@string/zero"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="onClickSettings"
        android:text="@string/setting"
        app:layout_constraintBottom_toTopOf="@+id/table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomScoreText"
        tools:ignore="UsingOnClickInXml"
        app:layout_constraintVertical_bias="0.313"/>

    <Button
        android:id="@+id/start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="onClickStart"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>